--- a/client/public/index.html
+++ b/client/public/index.html
@@ -52,7 +52,7 @@
                 padding-top: 3px;
             }
         </style>
-        <title>React App</title>
+        <title>Query Million Rows</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
