--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,8 +55,26 @@
         <title>Query Million Rows</title>
     </head>
     <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <h3>Query Million Rows</h3>
+        <div>
+            This is a demo for querying million rows in just few milliseconds.
+        </div>
+        <div>
+            The data source is
+            <a
+                href="https://www.kaggle.com/therohk/urban-dictionary-words-dataset/version/1"
+                target="_blank"
+            >
+                urban-dictionary-words-dataset
+            </a>
+            and the database is hosted on
+            <a href="https://www.mongodb.com/" target="_blank">
+                Mongodb Atlas
+            </a>
+            .
+        </div>
         <div id="root"></div>
+
         <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
