--- a/client/public/index.html
+++ b/client/public/index.html
@@ -57,7 +57,7 @@
     <body>
         <h3>Query Million Rows</h3>
         <div>
-            This is a demo for querying million rows in just few milliseconds.
+            This is a demo for searching 2 million rows in few milliseconds.
         </div>
         <div>
             The data source is
