--- a/client/public/index.html
+++ b/client/public/index.html
@@ -52,12 +52,13 @@
                 padding-top: 3px;
             }
         </style>
-        <title>Query Million Rows</title>
+        <title>Search Million Rows</title>
     </head>
     <body>
-        <h3>Query Million Rows</h3>
+        <h3>Search Million Rows</h3>
         <div>
-            This is a demo for searching 2 million rows in few milliseconds.
+            This is a demo for searching strings from 2 million rows in just few
+            milliseconds.
         </div>
         <div>
             The data source is
